# apr-ocr

./: .gitignore  CMakeLists.txt  variables.txt
cmake/: FindAPR.cmake
include/: teszt.h
src/: main.c  teszt.c
